@@ -8,6 +8,7 @@ import com.mojang.brigadier.arguments.FloatArgumentType;
 import com.mojang.brigadier.arguments.IntegerArgumentType;
 import com.mojang.brigadier.arguments.LongArgumentType;
 import com.mojang.brigadier.arguments.StringArgumentType;
+import java.util.Locale;
 import java.util.Map;
 import net.minecraft.SharedConstants;
 import net.minecraft.commands.arguments.AngleArgument;
@@ -137,7 +138,7 @@ public class ArgumentTypeInfos {
     public static <A extends ArgumentType<?>> ArgumentTypeInfo<A, ?> byClass(A param0) {
         ArgumentTypeInfo<?, ?> var0 = BY_CLASS.get(param0.getClass());
         if (var0 == null) {
-            throw new IllegalArgumentException("Unrecognized argument type %s (%s)".formatted(param0, param0.getClass()));
+            throw new IllegalArgumentException(String.format(Locale.ROOT, "Unrecognized argument type %s (%s)", param0, param0.getClass()));
         } else {
             return var0;
         }
